feat: 作成中の予定のクリア、確定、及びプロンプトのチューニングと反映